Bump lwjgl, fix 2 bugs